--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -2,19 +2,14 @@ body{
   font-family:Arial, Helvetica, sans-serif
 }
 
-.para,
-.small-para {
-  color: hsl(0, 0%, 0%);
-  font-weight: 800;
-}
-
-.small-para {
-  font-size: 14px;
-  font-weight: 800;
-}
+.para.small-para {
+    font-size: 20px;
+    font-weight: bold;
+  }
 
 .para {
-  font-size: 22px;
+  font-size: 30px;
+  font-weight: bold;
 }
 
 .confirm {
@@ -39,4 +34,15 @@ div.text {
   color: rgb(0, 0, 0);
   font-size: 22px;
   font-weight: 100;
+}
+
+#confirm-button {
+  background-color: green;
+  color: white;
+  font-weight: bold;
+}
+
+.text .child {
+  font-size: 15px;
+  font-weight: bold;
 }
